--- a/app/views/templates/base.html
+++ b/app/views/templates/base.html
@@ -19,7 +19,7 @@
     <link
       rel="icon"
       href="{{ url_for('static', filename='images/mckesson_fav_icon.png') }}"
-      type="image/x-icon"
+      type="image/png"
     />
   </head>
 
